# denote

./: Cargo.toml  LICENSE  README.md  config.example.toml  dev.launchd.plist
src/: cli.rs  config.rs  errors.rs  git.rs  lib.rs  main.rs  watcher.rs
src/db/: models.rs  reader.rs
src/export/: diff.rs  filemap.rs  markdown.rs  mod.rs
tests/: diff_test.rs  export_test.rs
tests/fixtures/: mod.rs
